[project]
name = "bssm-dev-mcp"
version = "0.2.2"
description = "MCP server for bssm-dev API"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
bssm-dev-mcp = "src.mcp.server:main"
bssm-dev-mcp-setup = "src.setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]
